--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
         </section>
         <section class="paragraphs">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          accusantium quasi accusamus doloribus optio magnam ad in, velit at,
-          nulla nobis inventore enim minima.
+            Lorem, ipsum dolor sit amet consectetur adipisicing 
+            elit. Iste impedit nisi ipsam dolorem veritatis ea 
+            provident facere obcaecati necessitatibus esse!
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          accusantium quasi accusamus doloribus optio magnam ad in, velit at,
-          nulla nobis inventore enim minima.
+            Lorem, ipsum dolor sit amet consectetur adipisicing 
+            elit. Iste impedit nisi ipsam dolorem veritatis ea 
+            provident facere obcaecati necessitatibus esse!
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          accusantium quasi accusamus doloribus optio magnam ad in, velit at,
-          nulla nobis inventore enim minima.
+            Lorem, ipsum dolor sit amet consectetur adipisicing 
+            elit. Iste impedit nisi ipsam dolorem veritatis ea 
+            provident facere obcaecati necessitatibus esse!
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          accusantium quasi accusamus doloribus optio magnam ad in, velit at,
-          nulla nobis inventore enim minima.
+            Lorem, ipsum dolor sit amet consectetur adipisicing 
+            elit. Iste impedit nisi ipsam dolorem veritatis ea 
+            provident facere obcaecati necessitatibus esse!
         </p>
         </section>
     </div>
